<resources>
    <string name="app_name">Tod</string>
    <string name="error_initializing_auth">Oops, something happened when we consulted your data</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="version">Version 0.0.1</string>
    <string name="sign_out">Sign Out</string>
    <string name="show_completed">Show Completed</string>
    <string name="title_activity_main">Home</string>
    <string name="title_activity_help">Tod App Help</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tell_a_friend">Tell a Friend</string>
    <string name="help">Help</string>
    <string name="default_user_name">Tod User Name</string>
    <string name="default_user_email">user.name@tod.com</string>
    <string name="my_checklist">My Checklists</string>
    <string name="my_checklists">My Checklists</string>
    <string name="become_pro">Become Pro</string>
    <string name="my_rewards">My Rewards</string>
    <string name="notifications">Notifications</string>
</resources>
