<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_checklists"
            android:icon="@drawable/ic_menu_my_checklist"
            android:title="@string/my_checklists" />
        <item
            android:id="@+id/nav_become_pro"
            android:title="@string/become_pro"
            android:icon="@drawable/ic_menu_become_pro" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/ic_menu_rewards"
            android:title="@string/my_rewards" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/action_settings" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_tell_a_friend"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/tell_a_friend" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/sign_out" />
    </group>
</menu>